--- a/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
+++ b/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
@@ -132,8 +132,10 @@
     <ClInclude Include="AdditionalObject.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="BaseObject.h" />
+    <ClInclude Include="Bird.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Collision.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="FrameAnimation.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameConfiguration.h" />
@@ -143,15 +145,18 @@
     <ClInclude Include="GameUtils.h" />
     <ClInclude Include="KEY.h" />
     <ClInclude Include="List.h" />
+    <ClInclude Include="Panther.h" />
     <ClInclude Include="PhysicsObject.h" />
     <ClInclude Include="MovableRect.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Shuriken.h" />
+    <ClInclude Include="Soldier.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="SpriteManager.h" />
     <ClInclude Include="Sword.h" />
     <ClInclude Include="SwordMan.h" />
+    <ClInclude Include="Throwman.h" />
     <ClInclude Include="Tilemap.h" />
     <ClInclude Include="WindmillShuriken.h" />
     <ClInclude Include="WindowGame.h" />
@@ -160,9 +165,12 @@
     <ClCompile Include="AdditionalObject.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="BaseObject.cpp" />
+    <ClCompile Include="Bird.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="CollisionType.h" />
+    <ClCompile Include="CollisionTypeCanCollide.h" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameConfiguration.cpp" />
     <ClCompile Include="GameDirectX.cpp" />
@@ -170,15 +178,18 @@
     <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="GameUtils.cpp" />
     <ClCompile Include="KEY.cpp" />
+    <ClCompile Include="Panther.cpp" />
     <ClCompile Include="PhysicsObject.cpp" />
     <ClCompile Include="MovableRect.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="Shuriken.cpp" />
+    <ClCompile Include="Soldier.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteManager.cpp" />
     <ClCompile Include="Sword.cpp" />
     <ClCompile Include="SwordMan.cpp" />
+    <ClCompile Include="Throwman.cpp" />
     <ClCompile Include="Tilemap.cpp" />
     <ClCompile Include="WindmillShuriken.cpp" />
     <ClCompile Include="WindowGame.cpp" />
