--- a/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
+++ b/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Flame.h" />
     <ClInclude Include="FrameAnimation.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameConfiguration.h" />
@@ -171,6 +172,7 @@
     <ClCompile Include="CollisionType.h" />
     <ClCompile Include="CollisionTypeCanCollide.h" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Flame.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameConfiguration.cpp" />
     <ClCompile Include="GameDirectX.cpp" />
