thêm Item màn 1, có tinh chỉnh cho state Bird, xét va chạm giữa Item-Ground, Weapon-Item, Player-Item

--- a/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
+++ b/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
@@ -146,6 +146,15 @@
     <ClInclude Include="GameTexture.h" />
     <ClInclude Include="GameTime.h" />
     <ClInclude Include="GameUtils.h" />
+    <ClInclude Include="Item.h" />
+    <ClInclude Include="ItemBonusBlue.h" />
+    <ClInclude Include="ItemBonusRed.h" />
+    <ClInclude Include="ItemClock.h" />
+    <ClInclude Include="ItemFireWheel.h" />
+    <ClInclude Include="ItemRestorePhysicalStrenght.h" />
+    <ClInclude Include="ItemShuriken.h" />
+    <ClInclude Include="ItemSpiritualStrenghtBlue.h" />
+    <ClInclude Include="ItemSpiritualStrengtRed.h" />
     <ClInclude Include="KEY.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="Panther.h" />
@@ -183,6 +192,15 @@
     <ClCompile Include="GameTexture.cpp" />
     <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="GameUtils.cpp" />
+    <ClCompile Include="Item.cpp" />
+    <ClCompile Include="ItemBonusBlue.cpp" />
+    <ClCompile Include="ItemBonusRed.cpp" />
+    <ClCompile Include="ItemClock.cpp" />
+    <ClCompile Include="ItemFireWheel.cpp" />
+    <ClCompile Include="ItemRestorePhysicalStrenght.cpp" />
+    <ClCompile Include="ItemShuriken.cpp" />
+    <ClCompile Include="ItemSpiritualStrenghtBlue.cpp" />
+    <ClCompile Include="ItemSpiritualStrengtRed.cpp" />
     <ClCompile Include="KEY.cpp" />
     <ClCompile Include="Panther.cpp" />
     <ClCompile Include="PhysicsObject.cpp" />
