add Sword kế thừa Weapon, thêm hiệu ứng nổ cho Weapon

--- a/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
+++ b/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
@@ -174,7 +174,7 @@
     <ClInclude Include="SwordMan.h" />
     <ClInclude Include="Throwman.h" />
     <ClInclude Include="Tilemap.h" />
-    <ClInclude Include="SubWeapon.h" />
+    <ClInclude Include="Weapon.h" />
     <ClInclude Include="WindmillShuriken.h" />
     <ClInclude Include="WindowGame.h" />
   </ItemGroup>
@@ -224,7 +224,7 @@
     <ClCompile Include="SwordMan.cpp" />
     <ClCompile Include="Throwman.cpp" />
     <ClCompile Include="Tilemap.cpp" />
-    <ClCompile Include="SubWeapon.cpp" />
+    <ClCompile Include="Weapon.cpp" />
     <ClCompile Include="WindmillShuriken.cpp" />
     <ClCompile Include="WindowGame.cpp" />
     <ClCompile Include="Main.cpp" />
